--- a/config/database.yml
+++ b/config/database.yml
@@ -7,8 +7,8 @@
 default: &default
   host: localhost
   adapter: postgresql
-  username: realm
-  password: utongnimacmac
+  username: goalista10
+  password: pokeekop12
   timeout: 5000
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
